clusters/smart-cash-develop/common/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: develop

---

apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress

---

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---

apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
